[package]
name = "exhume_exfat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettytable = "0.10"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
clap-num = "1"
exhume_body = "0.1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
