[package]
name = "exhume_exfat"
version = "0.1.2"
edition = "2024"
description = "Extract exFAT Filesystem specific artefacts from a given Partition."
documentation = "https://www.forensicxlab.com/docs/exhume_exfat/getting-started"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettytable = "0.10"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
clap-num = "1"
exhume_body = "0.3.4"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1"
